MLR-133: Enabled both the validation and Create/Update workflows from the UI. UI will potentially need updating once the gateway has implemented Keycloak-based auth and auth tokens.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 mlrGatewayHost: http://localhost
-mlrGatewayPort: 8082
-mlrGatewayUploadPath: /workflow/ddot
+mlrGatewayPort: 8080
+mlrGatewayUploadPath: /workflow/ddots
+mlrGatewayValidatePath: /workflow/ddots/validate
 mlrInterfacePassword: test
