MLR-133: Updated packaging to WAR to allow jsps to work within Docker. Updated readme and application properties. Updated envionrment variable names.

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>gov.usgs.wma</groupId>
     <artifactId>mlrInterface</artifactId>
     <version>0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
