--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-mlrGatewayHost: http://localhost
-mlrGatewayPort: 8080
-mlrGatewayUploadPath: /workflow/ddots
-mlrGatewayValidatePath: /workflow/ddots/validate
+MLR_GATEWAY_HOST: http://localhost
+MLR_GATEWAY_PORT: 8081
+MLR_GATEWAY_UPLOAD_PATH: /workflows/ddots
+MLR_GATEWAY_VALIDATE_PATH: /workflows/ddots/validate
 mlrInterfacePassword: test
+spring.mvc.view.prefix: /WEB-INF/views/
+spring.mvc.view.suffix: .jsp
