--- a/pom.xml
+++ b/pom.xml
@@ -10,20 +10,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <additionalparam>-Xdoclint:none</additionalparam>
         <springfox.version>2.7.0</springfox.version>
         <wma.artifactory.url>https://cida.usgs.gov/artifactory</wma.artifactory.url>
     </properties>
 
     <distributionManagement>
         <repository>
-            <id>central</id>
+            <id>release</id>
             <name>cidasdpdasartip.cr.usgs.gov-releases</name>
-            <url>${wma.artifactory.url}/mlr-maven</url>
+            <url>${wma.artifactory.url}/mlr-maven-releases</url>
         </repository>
         <snapshotRepository>
             <id>snapshots</id>
             <name>cidasdpdasartip.cr.usgs.gov-snapshots</name>
-            <url>${wma.artifactory.url}/mlr-maven</url>
+            <url>${wma.artifactory.url}/mlr-maven-snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
@@ -97,4 +98,11 @@
             </plugin>
         </plugins>
     </build>
+    
+    <scm>
+        <connection>scm:git:https://github.com/USGS-CIDA/MLR-User-Interface.git</connection>
+        <developerConnection>scm:git:https://github.com/USGS-CIDA/MLR-User-Interface.git</developerConnection>
+        <url>https://github.com/USGS-CIDA/MLR-User-Interface</url>
+        <tag>HEAD</tag>
+    </scm>
 </project>
