--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,8 @@ security:
 
 server:
     port: ${serverPort:8443}
+    ssl:
+        key-store: ${keystoreLocation}
+        key-store-password: ${keystorePassword}
+        key-password: ${keystorePassword}
+        key-alias: ${keystoreSSLKey:tomcat}
