--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,29 @@
-.DS_Store
-node_modules
-/dist
+# Compiled class file
+*.class
 
-# local env files
-.env.local
-.env.*.local
+# Log file
+*.log
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# BlueJ files
+*.ctxt
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+/target/
+/.classpath
+/.project
+/.settings/
+/application.yml
+/.env
+/mlrLegacyServiceDev.env
