--- a/.env.prod
+++ b/.env.prod
@@ -1,1 +1,2 @@
-VUE_APP_API_GATEWAY=https://mlr-website.s3.us-west-2.amazonaws.com/
+NODE_ENV=production
+VUE_APP_API_GATEWAY=https://mlr-api.nwis.usgs.gov
