--- a/.env.qa
+++ b/.env.qa
@@ -1,1 +1,2 @@
-VUE_APP_API_GATEWAY=https://mlr-qa-website.s3.us-west-2.amazonaws.com/
+NODE_ENV=production
+VUE_APP_API_GATEWAY=https://mlr-api-qa.nwis.usgs.gov
