--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
 NODE_ENV=production
-VUE_APP_API_GATEWAY=https://mlr-test-website.s3.us-west-2.amazonaws.com/
+VUE_APP_API_GATEWAY=https://mlr-api-test.nwis.usgs.gov
